Fixed navigation and footer links across all pages

--- a/what-we-offer.html
+++ b/what-we-offer.html
@@ -120,7 +120,7 @@
     <section id="services" class="services-section">
       <div class="container">
         <div class="section-header text-center mb-5" data-aos="fade-up">
-          <h6 class="section-subtitle">OUR SERVICES</h6>
+          <h6 class="section-subtitle">Our Services</h6>
           <h2 class="section-title">What We Offer</h2>
           <div class="divider mx-auto"></div>
           <p class="section-description">
@@ -135,236 +135,105 @@
           </p>
         </div>
 
-        <!-- Services Detailed Section -->
-        <div class="services-detailed">
-          <div class="row mb-5 align-items-center" data-aos="fade-up">
-            <div class="col-lg-4 mb-4 mb-lg-0">
-              <div class="service-icon-large text-center">
+        <div class="row g-4">
+          <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
+            <div class="service-card">
+              <div class="icon-box">
                 <i class="material-icons">credit_card</i>
               </div>
-            </div>
-            <div class="col-lg-8">
-              <h3 class="service-title">Business Cash Advance</h3>
-              <p class="service-description">
+              <h3>Business Cash Advance</h3>
+              <p>
                 Fast funding for your business with flexible repayment options
-                based on your daily sales. A business cash advance provides
-                quick access to working capital without the fixed payment
-                structure of traditional loans.
+                based on your daily sales.
               </p>
-              <ul class="service-features">
-                <li>
-                  <i class="fas fa-check-circle"></i> No fixed monthly payments
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Fast approval process
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Funding in as little as 24
-                  hours
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> No collateral required
-                </li>
-              </ul>
-              <a href="services.html" class="btn btn-primary mt-3">Apply Now</a>
+              <a href="services.html" class="service-link"
+                >Learn More <i class="material-icons">arrow_forward</i></a
+              >
             </div>
           </div>
 
-          <div
-            class="row mb-5 align-items-center flex-row-reverse"
-            data-aos="fade-up"
-            data-aos-delay="100"
-          >
-            <div class="col-lg-4 mb-4 mb-lg-0">
-              <div class="service-icon-large text-center">
+          <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
+            <div class="service-card">
+              <div class="icon-box">
                 <i class="material-icons">receipt_long</i>
               </div>
-            </div>
-            <div class="col-lg-8">
-              <h3 class="service-title">Invoice & PO Factoring</h3>
-              <p class="service-description">
+              <h3>Invoice & PO Factoring</h3>
+              <p>
                 Turn your unpaid invoices into immediate cash to improve your
-                business cash flow. Invoice factoring allows you to sell your
-                accounts receivable at a discount to receive immediate capital.
+                business cash flow.
               </p>
-              <ul class="service-features">
-                <li>
-                  <i class="fas fa-check-circle"></i> Immediate cash for unpaid
-                  invoices
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> No additional debt on your
-                  books
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Improve cash flow
-                  management
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Eliminate waiting 30-90
-                  days for payment
-                </li>
-              </ul>
-              <a href="services.html" class="btn btn-primary mt-3">Apply Now</a>
+              <a href="services.html" class="service-link"
+                >Learn More <i class="material-icons">arrow_forward</i></a
+              >
             </div>
           </div>
 
-          <div
-            class="row mb-5 align-items-center"
-            data-aos="fade-up"
-            data-aos-delay="200"
-          >
-            <div class="col-lg-4 mb-4 mb-lg-0">
-              <div class="service-icon-large text-center">
+          <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+            <div class="service-card">
+              <div class="icon-box">
                 <i class="material-icons">account_balance</i>
               </div>
-            </div>
-            <div class="col-lg-8">
-              <h3 class="service-title">Business Credit Lines</h3>
-              <p class="service-description">
+              <h3>Business Credit Lines</h3>
+              <p>
                 Flexible credit lines that grow with your business needs and
-                only pay for what you use. Access the funds when you need them
-                and repay on flexible terms.
+                only pay for what you use.
               </p>
-              <ul class="service-features">
-                <li>
-                  <i class="fas fa-check-circle"></i> Draw funds as needed
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Only pay interest on what
-                  you use
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Credit limit increases as
-                  your business grows
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Revolving credit that
-                  replenishes as you pay
-                </li>
-              </ul>
-              <a href="services.html" class="btn btn-primary mt-3">Apply Now</a>
+              <a href="services.html" class="service-link"
+                >Learn More <i class="material-icons">arrow_forward</i></a
+              >
             </div>
           </div>
 
-          <div
-            class="row mb-5 align-items-center flex-row-reverse"
-            data-aos="fade-up"
-            data-aos-delay="300"
-          >
-            <div class="col-lg-4 mb-4 mb-lg-0">
-              <div class="service-icon-large text-center">
+          <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
+            <div class="service-card">
+              <div class="icon-box">
                 <i class="material-icons">history</i>
               </div>
-            </div>
-            <div class="col-lg-8">
-              <h3 class="service-title">Bad Credit Advance</h3>
-              <p class="service-description">
+              <h3>Bad Credit Advance</h3>
+              <p>
                 Financing options available regardless of credit history or past
-                financial challenges. We understand that good businesses can
-                sometimes have credit challenges.
+                financial challenges.
               </p>
-              <ul class="service-features">
-                <li>
-                  <i class="fas fa-check-circle"></i> Focus on business
-                  performance, not just credit score
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Multiple financing options
-                  available
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Transparent terms and
-                  conditions
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Opportunity to rebuild
-                  credit while growing your business
-                </li>
-              </ul>
-              <a href="services.html" class="btn btn-primary mt-3">Apply Now</a>
+              <a href="services.html" class="service-link"
+                >Learn More <i class="material-icons">arrow_forward</i></a
+              >
             </div>
           </div>
 
-          <div
-            class="row mb-5 align-items-center"
-            data-aos="fade-up"
-            data-aos-delay="400"
-          >
-            <div class="col-lg-4 mb-4 mb-lg-0">
-              <div class="service-icon-large text-center">
+          <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
+            <div class="service-card">
+              <div class="icon-box">
                 <i class="material-icons">business</i>
               </div>
-            </div>
-            <div class="col-lg-8">
-              <h3 class="service-title">Equipment Leasing & Financing</h3>
-              <p class="service-description">
+              <h3>Equipment Leasing & Financing</h3>
+              <p>
                 Get the equipment your business needs without the large upfront
-                investment. Preserve your capital while acquiring essential
-                equipment.
+                investment.
               </p>
-              <ul class="service-features">
-                <li>
-                  <i class="fas fa-check-circle"></i> New and used equipment
-                  financing
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Competitive rates and
-                  terms
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Potential tax advantages
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Options to purchase at end
-                  of lease term
-                </li>
-              </ul>
-              <a href="services.html" class="btn btn-primary mt-3">Apply Now</a>
+              <a href="services.html" class="service-link"
+                >Learn More <i class="material-icons">arrow_forward</i></a
+              >
             </div>
           </div>
 
-          <div
-            class="row align-items-center flex-row-reverse"
-            data-aos="fade-up"
-            data-aos-delay="500"
-          >
-            <div class="col-lg-4 mb-4 mb-lg-0">
-              <div class="service-icon-large text-center">
+          <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+            <div class="service-card">
+              <div class="icon-box">
                 <i class="material-icons">support_agent</i>
               </div>
-            </div>
-            <div class="col-lg-8">
-              <h3 class="service-title">24/7 Customer Support</h3>
-              <p class="service-description">
+              <h3>24/7 Customer Support</h3>
+              <p>
                 Our experienced team is always available to assist you with any
-                questions or concerns. We pride ourselves on exceptional
-                customer service.
+                questions or concerns.
               </p>
-              <ul class="service-features">
-                <li>
-                  <i class="fas fa-check-circle"></i> Dedicated account managers
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Round-the-clock support
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Multilingual assistance
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Expert guidance through
-                  the funding process
-                </li>
-              </ul>
-              <a href="services.html" class="btn btn-primary mt-3"
-                >Get Support</a
+              <a href="services.html" class="service-link"
+                >Learn More <i class="material-icons">arrow_forward</i></a
               >
             </div>
           </div>
         </div>
       </div>
     </section>
-
     <!-- CTA Section -->
     <section class="cta-section text-center">
       <div class="container">
@@ -449,8 +318,8 @@
             </div>
             <div class="col-md-6 text-md-end">
               <ul class="footer-links">
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Terms of Service</a></li>
+                <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                <li><a href="terms-conditions.html">Terms of Service</a></li>
                 <li><a href="#">Sitemap</a></li>
               </ul>
             </div>
