--- a/index.html
+++ b/index.html
@@ -730,8 +730,8 @@
             </div>
             <div class="col-md-6 text-md-end">
               <ul class="footer-links">
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Terms of Service</a></li>
+                <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                <li><a href="terms-conditions.html">Terms of Service</a></li>
                 <li><a href="#">Sitemap</a></li>
               </ul>
             </div>
