--- a/services.html
+++ b/services.html
@@ -53,7 +53,9 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">What We Offer</a>
+              <a class="nav-link active" href="what-we-offer.html"
+                >What We Offer</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="index.html#about">About Us</a>
@@ -295,8 +297,8 @@
             </div>
             <div class="col-md-6 text-md-end">
               <ul class="footer-links">
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Terms of Service</a></li>
+                <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                <li><a href="terms-conditions.html">Terms of Service</a></li>
                 <li><a href="#">Sitemap</a></li>
               </ul>
             </div>
