Fixed APPLY NOW button in hero section to use proper link structure

--- a/index.html
+++ b/index.html
@@ -81,13 +81,12 @@
               We provide expert business financing solutions with flexible terms
               and quick approvals to help your business grow.
             </p>
-            <button class="btn btn-primary btn-lg me-3 mb-3 mb-lg-0">
-              <a
-                href="services.html"
-                style="color: white; text-decoration: none"
-                >Apply Now</a
-              >
-            </button>
+            <a
+              href="services.html"
+              class="btn btn-primary btn-lg me-3 mb-3 mb-lg-0"
+            >
+              APPLY NOW
+            </a>
           </div>
           <div
             class="col-lg-6"
