--- a/index.html
+++ b/index.html
@@ -81,10 +81,7 @@
               We provide expert business financing solutions with flexible terms
               and quick approvals to help your business grow.
             </p>
-            <a
-              href="services.html"
-              class="btn btn-primary btn-lg me-3 mb-3 mb-lg-0"
-            >
+            <a href="#qualify" class="btn btn-primary btn-lg me-3 mb-3 mb-lg-0">
               APPLY NOW
             </a>
           </div>
