--- a/services.html
+++ b/services.html
@@ -64,7 +64,7 @@
               <a class="nav-link" href="index.html#faq">FAQ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link btn-qualify" href="#">Apply Now</a>
+              <a class="nav-link btn-qualify" href="#home">Apply Now</a>
             </li>
           </ul>
         </div>
@@ -83,13 +83,12 @@
               within 48 hours have the money in your account ready to move
               forward.
             </p>
-            <button class="btn btn-primary btn-lg me-3 mb-3 mb-lg-0">
-              <a
-                href="index.html#faq"
-                style="color: white; text-decoration: none"
-                >MORE QUESTIONS?</a
-              >
-            </button>
+            <a
+              href="index.html#faq"
+              class="btn btn-primary btn-lg me-3 mb-3 mb-lg-0"
+            >
+              MORE QUESTIONS?
+            </a>
           </div>
           <div
             class="col-lg-6"
