Fixed form submission, styling and navigation issues

--- a/services.html
+++ b/services.html
@@ -64,7 +64,7 @@
               <a class="nav-link" href="index.html#faq">FAQ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link btn-qualify" href="#home">Apply Now</a>
+              <a class="nav-link btn-qualify" href="#">Apply Now</a>
             </li>
           </ul>
         </div>
@@ -83,12 +83,13 @@
               within 48 hours have the money in your account ready to move
               forward.
             </p>
-            <a
-              href="index.html#faq"
-              class="btn btn-primary btn-lg me-3 mb-3 mb-lg-0"
-            >
-              MORE QUESTIONS?
-            </a>
+            <button class="btn btn-primary btn-lg me-3 mb-3 mb-lg-0">
+              <a
+                href="index.html#faq"
+                style="color: white; text-decoration: none"
+                >MORE QUESTIONS?</a
+              >
+            </button>
           </div>
           <div
             class="col-lg-6"
@@ -97,7 +98,9 @@
             data-aos-delay="200"
           >
             <div class="hero-form-card">
-              <h3 class="form-title mb-4">Apply for Credit</h3>
+              <h3 class="form-title mb-4" style="color: var(--text-light)">
+                Apply for Credit
+              </h3>
               <form id="applyForm">
                 <div class="mb-3">
                   <input
